# FPNN

./: .gitmodules  README.md  index.html  params.json
backends/: README.md
evaluation/: .gitignore  compute_accuracy.py  utility_caffe.py
field_generators/: CMakeLists.txt  README.md
field_generators/field_generators/: CMakeLists.txt
field_generators/field_generators/cmake/: FindGFlags.cmake
field_generators/field_generators/include/: abstract_parameter.h  adapter_widget.h  axis_indicator.h  cgal_types.h  cgal_utility.h  color_map.h  command_line.h  common.h  dense_field.h  dragger.h  file_format_obj.h  file_format_off.h  file_format_ply.h  force_update_visitor.h  information.h  main_window.h  mesh_model.h  osg_utility.h  osg_viewer_widget.h  parameter.h  parameter_dialog.h  parameter_manager.h  pick_handler.h  point_cloud.h  point_intersector.h  progress_bar.h  renderable.h  scaler.h  scene_widget.h  singleton.h  stateset_manipulator.h  task_dispatcher.h  thread_pool.h  threaded_painter.h  toggle_handler.h  update_callback.h
field_generators/field_generators/include/impl/: parameter.hpp
field_generators/field_generators/resources/: main_window.ui
field_generators/field_generators/src/: adapter_widget.cpp  axis_indicator.cpp  cgal_utility.cpp  color_map.cpp  command_line.cpp  common.cpp  dense_field.cpp  dragger.cpp  file_format_obj.cpp  file_format_off.cpp  file_format_ply.cpp  force_update_visitor.cpp  information.cpp  main.cpp  main_window.cpp  mesh_model.cpp  mesh_model_io.cpp  osg_utility.cpp  osg_viewer_widget.cpp  parameter.cpp  parameter_dialog.cpp  parameter_manager.cpp  pick_handler.cpp  point_cloud.cpp  point_cloud_static.cpp  point_intersector.cpp  progress_bar.cpp  renderable.cpp  scaler.cpp  scene_widget.cpp  stateset_manipulator.cpp  task_dispatcher.cpp  threaded_painter.cpp  toggle_handler.cpp  update_callback.cpp
field_generators/mesh_io/: CMakeLists.txt
field_generators/mesh_io/include/: MtlContext.h  ObjContext.h  OffContext.h  mesh_io.h  mesh_io_exports.h  usercallbacks.h
field_generators/mesh_io/include/PLY/: base.h  header.h  io.h  object.h  unknown.h
field_generators/mesh_io/src/: mtl.l  mtl.y  off_reader.cpp  wavefrontobj.l  wavefrontobj.y
field_generators/mesh_io/src/PLY/: base.cpp  header.cpp  io.cpp  object.cpp  unknown.cpp
field_generators/python/: convert_hdf5_to_lmdb.py  download_redwood_data.py  generate_df_list.py  generate_filelist_modelnet.py  generate_filelist_shapenet.py  generate_filelist_shrec.py  split_lmdb.py
field_generators/python/redwood/: meshes-bench.txt  meshes-bicycle.txt  meshes-chair.txt  meshes-motorcycle.txt  meshes-plant.txt  meshes-sign.txt  meshes-sofa.txt  meshes-table.txt  meshes-trash container.txt
training_settings/1024x8_fc0_1024_df_0.1_0.4_bn_sigma_8/: run_training.sh  train_val.prototxt
training_settings/1024x8_fc0_1024_df_0.1_0.4_bn_sigma_8_nf/: run_training.sh  train_val.prototxt
training_settings/1024x8_fc0_1024_df_0.1_0.4_bn_sigma_8_no_fp/: train_val.prototxt
training_settings/1024x8_fc3_1024_df_0.1_0.4_bn_sigma_8/: solver.prototxt  train_val.prototxt
training_settings/1024x8_fc3_1024_df_0.1_0.4_bn_sigma_8_nf/: run_training.sh  solver.prototxt  train_val.prototxt
training_settings/1024x8_fc3_1024_df_0.1_0.4_bn_sigma_8_no_fp/: run_training.sh  train_val.prototxt
training_settings/1024x8_fc3_1024_df_0.1_0.4_bn_sigma_8_r15_t0.1_s/: train_val.prototxt
visualization/: extract_layer_parameters.py  extract_probing_filters.py
visualization/viewer/: viewer.html
